[package]
name = "piecer"
version = "1.3.0"
edition = "2024"
license = "MIT"
keywords = ["tokenizer", "natural-language-processing"]
description = "Unicode codepoint BPE tokenizer featuring byte fallback and optional byte-level-only tokenization"
repository = "https://github.com/wildstyl3r/piecer"
exclude = ["*.txt"]

[dependencies]
daachorse = "3.0.2"
priority-queue = "2.7.0"
rayon = "1.12.0"
regex = "1.12.4"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
